# heuro

./: .gitignore  .gitmodules  CMakeLists.txt  HeuroCli.cpp  HeuroCli.hpp  README.md  main.cpp
heuro/: CMakeLists.txt  Heuro.hpp  Scp.cpp  Scp.hpp
heuro/debug/: Instrumentor.hpp
heuro/util/: Data.hpp  RandomBinaryGenerator.hpp  RandomIntGenerator.hpp  RandomRealGenerator.hpp  ScpParser.cpp  ScpParser.hpp  Timer.cpp  Timer.hpp
io/: ExcelFile.cpp  ExcelFile.hpp
